--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 	compile('org.web3j:core:+')
 	compile('org.web3j:infura:+')
 	compile('com.google.guava:guava:+')
+	compile "com.xenomachina:kotlin-argparser:+"
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
 }
