--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=80
-spring.data.mongodb.uri=mongodb://adm:Ethereum;10@localhost/ether
+spring.data.mongodb.uri=mongodb://adm:Ethereum;10@localhost/ether?authSource=admin
