--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "4.6"
+	gradleVersion = "4.7"
+	distributionType = Wrapper.DistributionType.ALL
 }
 
