--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
 	ext {
+		//kotlinVersion = '1.2.40'
 		kotlinVersion = '+'
 		springBootVersion = '+'
 	}
@@ -16,6 +17,7 @@ buildscript {
 	}
 }
 
+
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'application'
@@ -26,6 +28,12 @@ apply plugin: 'io.spring.dependency-management'
 group = 'com.ethwal'
 version = '1.0.0-RELEASE'
 sourceCompatibility = 1.9
+
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
+}
 
 compileKotlin {
 	kotlinOptions {
@@ -52,6 +60,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
+	compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:+")
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
 	compile('org.web3j:core:+')
