--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,9 @@ dependencies {
 	compile('org.web3j:core:+')
 	compile('org.web3j:infura:+')
 	compile('com.google.guava:guava:+')
-	compile("com.xenomachina:kotlin-argparser:+")
+    compile("org.bouncycastle:bcprov-jdk15on:+")
+    compile("org.bouncycastle:bcpkix-jdk15on:+")
+    compile("com.xenomachina:kotlin-argparser:+")
 	compile("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:+")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
