--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
 task wrapper(type: Wrapper) {
-	gradleVersion = "4.8-rc-3"
+	gradleVersion = "4.8"
 	distributionType = Wrapper.DistributionType.ALL
 }
 
