--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
 	compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:+")
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+	compile("org.jetbrains.kotlin:kotlin-stdlib:+")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
 	compile('org.web3j:core:+')
 	compile('org.web3j:infura:+')
