--- a/build.gradle
+++ b/build.gradle
@@ -66,9 +66,9 @@ dependencies {
 	compile('org.web3j:core:+')
 	compile('org.web3j:infura:+')
 	compile('com.google.guava:guava:+')
-    compile("org.bouncycastle:bcprov-jdk15on:+")
-    compile("org.bouncycastle:bcpkix-jdk15on:+")
-    compile("com.xenomachina:kotlin-argparser:+")
+	compile("org.bouncycastle:bcprov-jdk15on:+")
+	compile("org.bouncycastle:bcpkix-jdk15on:+")
+	compile("com.xenomachina:kotlin-argparser:+")
 	compile("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:+")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
@@ -78,7 +78,7 @@ defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
 task wrapper(type: Wrapper) {
-	gradleVersion = "4.8.1"
+	gradleVersion = "4.9-rc-1"
 	distributionType = Wrapper.DistributionType.ALL
 }
 
