--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
 task wrapper(type: Wrapper) {
-	gradleVersion = "4.9-rc-1"
+	gradleVersion = "4.9"
 	distributionType = Wrapper.DistributionType.ALL
 }
 
