--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,10 @@ dependencies {
 defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
-task wrapper(type: Wrapper) {
-	gradleVersion = "4.10.2"
-	distributionType = Wrapper.DistributionType.ALL
-}
+// gradle wrapper --distribution-type=all --gradle-version=5.0-milestone-1
+
+//task wrapper(type: Wrapper) {
+	//gradleVersion = "4.10.2"
+//	gradleVersion = "5.0-milestone-1"
+//	distributionType = Wrapper.DistributionType.ALL
+//}
