--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 buildscript {
 	ext {
 		kotlinVersion = '+'
+		//kotlinVersion = '1.2.71'
 		springBootVersion = '+'
 	}
 	repositories {
 		mavenCentral()
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
-
+		maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.3" }
+    		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -30,7 +32,7 @@ sourceCompatibility = 1.9
 
 kotlin {
     experimental {
-        coroutines 'enable'
+        //coroutines 'enable'
     }
 }
 
@@ -48,9 +50,12 @@ compileTestKotlin {
 }
 
 repositories {
+	jcenter()
 	mavenCentral()
+  	maven { url "https://repo.eclipse.org/content/repositories/paho-snapshots" }
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
+	flatDir { dirs 'lib' }
 }
 
 
@@ -60,7 +65,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
 	compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:+")
-	compile("org.jetbrains.kotlin:kotlin-stdlib:+")
+	compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
 	compile('org.web3j:core:+')
 	compile('org.web3j:infura:+')
