--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
 		maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.3" }
-    		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -68,6 +68,7 @@ dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
 	compile('org.web3j:core:+')
+	compile('org.web3j:crypto:+')
 	compile('org.web3j:infura:+')
 	compile('com.google.guava:guava:+')
 	compile("org.bouncycastle:bcprov-jdk15on:+")
