--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 		mavenCentral()
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
-		maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.3" }
+		maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.4" }
 		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 	}
 	dependencies {
@@ -28,7 +28,7 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ethwal'
 version = '1.0.0-RELEASE'
-sourceCompatibility = 1.9
+sourceCompatibility = 11
 
 kotlin {
     experimental {
@@ -62,7 +62,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('org.springframework.boot:spring-boot-starter-webflux')
+	compile('org.springframework.boot:spring-boot-starter-webflux:+')
 	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
 	compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:+")
 	compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
