--- a/build.gradle
+++ b/build.gradle
@@ -82,10 +82,4 @@ dependencies {
 defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
-// gradle wrapper --distribution-type=all --gradle-version=5.0-milestone-1
-
-//task wrapper(type: Wrapper) {
-	//gradleVersion = "4.10.2"
-//	gradleVersion = "5.0-milestone-1"
-//	distributionType = Wrapper.DistributionType.ALL
-//}
+// gradle wrapper --distribution-type=all --gradle-version=5.0-rc-4
