--- a/build.gradle
+++ b/build.gradle
@@ -82,4 +82,4 @@ dependencies {
 defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
-// gradle wrapper --distribution-type=all --gradle-version=5.0-rc-4
+// ./gradlew wrapper --distribution-type=all --gradle-version=5.1-rc-2
