--- a/build.gradle
+++ b/build.gradle
@@ -82,4 +82,8 @@ dependencies {
 defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
-// ./gradlew wrapper --distribution-type=all --gradle-version=5.1-rc-2
+wrapper{
+    gradleVersion = '5.2-rc-1'
+    distributionType = Wrapper.DistributionType.ALL
+}
+
