--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
 wrapper{
-    gradleVersion = '5.2.1'
+    gradleVersion = '5.3-rc-1'
     distributionType = Wrapper.DistributionType.ALL
 }
 
