--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	ext {
+		//kotlinVersion = '1.3.21'
 		kotlinVersion = '+'
-		//kotlinVersion = '1.2.71'
 		springBootVersion = '+'
 	}
 	repositories {
@@ -9,7 +9,7 @@ buildscript {
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
 		maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.4" }
-		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+		//maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -55,6 +55,7 @@ repositories {
   	maven { url "https://repo.eclipse.org/content/repositories/paho-snapshots" }
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
+  	//maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 	flatDir { dirs 'lib' }
 }
 
@@ -63,7 +64,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-webflux:+')
-	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
 	compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:+")
 	compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
@@ -74,6 +74,7 @@ dependencies {
 	compile("org.bouncycastle:bcprov-jdk15on:+")
 	compile("org.bouncycastle:bcpkix-jdk15on:+")
 	compile("com.xenomachina:kotlin-argparser:+")
+	compile('com.fasterxml.jackson.module:jackson-module-kotlin')
 	compile("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:+")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
@@ -82,8 +83,8 @@ dependencies {
 defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
-wrapper{
-    gradleVersion = '5.3-rc-1'
+wrapper {
+    gradleVersion = '5.3'
     distributionType = Wrapper.DistributionType.ALL
 }
 
