--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,7 @@ defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
 wrapper {
-    gradleVersion = '5.4-rc-1'
+    gradleVersion = '5.4.1'
     distributionType = Wrapper.DistributionType.ALL
 }
 
