--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,6 @@ defaultTasks 'run'
 mainClassName = 'com.ethwal.server.ServerApplicationKt'
 
 wrapper {
-    gradleVersion = '5.6-rc-2'
+    gradleVersion = '5.6'
     distributionType = Wrapper.DistributionType.ALL
 }
